--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
- 
+    <section id="startPage">
+        <header>
+            <h1>Welcome to the Zoo Animal Game!</h1>
+        </header>
+        <main>
+            <p>You will be presented with a random zoo animal o guess. Choose what clues you want to reveal to help you guess correctly. Be careful! Each clue will deduct points from your total as will wrong guesses. Your points when you guess correctly will be your score for the game. Regardless of whether you can guess the animal, you will be given more information at the end of the game.</p>
+            <button id="startGame">Start Game</button>
+        </main>
+    </section>
+    <section id="gamePage">
+        <h2>Click clues to reveal. Enter guesses below.</h2>
+        <card class="clue"> Clue 1</card>
+        <card class="clue"> Clue 2</card>
+        <card class="clue"> Clue 3</card>
+        <card class="clue"> Clue 4</card>
+        <card class="clue"> Clue 5</card>
+        <card class="clue"> Clue 6</card>
+        <div class="answer">
+            <textarea> Enter guess here </textarea>
+            <button id="userGuess">Submit</button>
+        </div>
+        <div class="score">Current Score Here</div>
+    </section>
+    
 <!-- linked our custom js  -->
 <script src="./assets/js/script.js"></script>
 
