linked and displayed data from wiki api

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
               <button id = "play-again">Play Again?</button>
             </div>
           </div>
+        <!-- modal for wiki info -->
+        <div class="modal" id="info">
+            <div class="modal-background"></div>
+            <div class="modal-content">
+            <div id="wiki-info"></div>
+            </div>
+        </div>
 
 
         <div class="container">
