added youtube API on see info

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="modal" id="info">
             <div class="modal-background"></div>
             <div class="modal-content">
+                <div id="youtube-info"></div>
                 <div id="wiki-info"></div>
             </div>
         </div>
