added image and fixed text on start page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
             <h1>Welcome to the Zoo Animal Game!</h1>
         </header>
         <main>
-            <p>You will be presented with a random zoo animal. Try to guess it's official name. You may choose what clues you want to reveal to help you guess correctly. Be careful! Each clue will deduct bananas from your bunch as will wrong guesses. Wrong guesses will also deduct bananas from your bunch.Your final score is the number of bananas you have left in your bunch. Regardless of whether you can guess the animal, you will be given more information at the end of the game.</p>
+            <h4>You will be presented with a random zoo animal. Try to guess it's official name. You are given a bunch of bananas to start.</h4>
+            <h2>How to Play:</h2>
+                <li>
+                Click on the clues you want to reveal to help you guess correctly.
+                </li> 
+                <li>Be careful! Each clue will deduct bananas from your bunch. 
+                <li> Wrong guesses will also deduct bananas from your bunch.</li> 
+                </li> 
+                <li>Correctly guessing the name will add bananas back to your bunch.
+                </li>
+                <li>A Your final score is the number of bananas you have left in your bunch.
+                </li>
+                <span><img src="" id="startImage"/></span>
+                
+            <h4>Regardless of whether you can guess the animal, you will be given more information about your animal at the end of the game.</h4> 
             <button id="startGame"class="rpgui-button" type="button">Start Game</button>
         </main>
     </section>
