fixed typo on start page and added name to correct animal image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </li> 
                     <li>Correctly guessing the name will add bananas back to your bunch.
                     </li>
-                    <li>A Your final score is the number of bananas you have left in your bunch.
+                    <li>Your final score is the number of bananas you have left in your bunch.
                     </li>
                     <span><img src="" id="startImage"/></span>
                     
@@ -93,6 +93,7 @@
                 <div class="modal" id="correct">
                     <div class="modal-background"></div>
                     <div class="modal-content">
+                        <p id="correctAnswerText">Here is a picture of your animal. For more information click See Info below!</p>
                         <p class="image is-4by3">
                             <img id="correctly-guessed-picture"src="" alt="Image of the correctly guessed animal">
                         </p>
