added animal info  to starter page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                         <li>Your final score is the number of bananas you have left in your bunch.
                         </li>
                     </ul>
+                <div id="start-image-and-info">
                     <span><img src="" id="startImage"/></span>
+                    <ul id="startImageInfo"></ul>
+                </div>
                     
                 <h4 style="font-size:125%">Regardless of whether you can guess the animal, you will be given more information about your animal at the end of the game.</h4> 
                 <button id="startGame"class="rpgui-button" type="button">Start Game</button>
