fixed spelling error

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <button id = "see-info">See more?</button>
                                 <button id = "play-again">Play Again?</button>
                             </nav>
-                            <p><span id="congrat">Congratulation!<br /></span>The name is <span id="show-answer"></span>!</p>
+                            <p><span id="congrat">Congratulations!<br /></span>The name is <span id="show-answer"></span>!</p>
                         </section>
                     </div>
 
